--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^9.1.1
   shared_preferences: ^2.5.3
+  progress_state_button: ^1.0.4
+  convert: ^3.1.2
 
 dev_dependencies:
   flutter_test:
